# cpp_project_template

./: .clang-format  CMakeLists.txt  conanfile.py  init.py
src/: main.cpp
